# ofxstatement-pluxee

./: .gitignore  Pipfile  README.md  pyproject.toml
Scripts/: activate  activate.bat  activate.fish  activate.nu
UNKNOWN.egg-info/: SOURCES.txt
src/ofxstatement_pluxee/: plugin.py
tests/: test_sample.py
