# todo remove?

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-pluxee"
version = "0.0.1"
authors = [
  { name="Philip Kukoba", email="pkkb@use.startmail.com" },
]
description = "Pluxee plugin for ofxstatement"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement", "pluxee", "sodexo"]
dependencies = [
  "ofxstatement",
  "unidecode"
]

[project.urls]
Homepage = "https://github.com/philipkukoba/ofxstatement-pluxee/"

[project.entry-points."ofxstatement"]
pluxee = "ofxstatement_pluxee.plugin:PluxeePlugin"
